update my homework

--- a/templates/index.html
+++ b/templates/index.html
@@ -778,24 +778,23 @@
                     </div>
                 </div>
                 <div class="row">
-                    {% for blogs in blogs%}
+                    {% for blogs in blogs %}
                     <div class="col-lg-4 col-md-6">
                         <div class="blog-item wow fadeInUp" data-wow-delay=".5s">
                             <div class="blog-thumb">
-                                <a href="/blog-details/">
+                                <a href="{% url 'blog_details' blogs.id %}">
                                     <img src="{{blogs.image.url}}" alt="">
                                 </a>
-                                <a href="#" class="category">{{blogs.category}}</a>
                             </div>
 
                             <div class="blog-content">
                                 <div class="blog-meta">
                                     <ul class="ul-reset">
-                                        <li><i class="fa-light fa-calendar-days"></i>{{blogs.data}}</li>
-                                        <li><i class="fa-light fa-comments"></i><a href="#">Comments {{blogs.comments}}</a></li>
+                                        <li><i class="fa-light fa-calendar-days"></i>{{blogs.created_at}}</li>
                                     </ul>
                                 </div>
-                                <h3 class="blog-title"><a href="blog-details.html">{{blogs.name_blog}}</a></h3>
+                                <h3 class="blog-title"><a href="{% url 'blog_details' blogs.id %}">{{blogs.name_blog}}</a></h3>
+                                <p>{{ blogs.description|truncatewords:3 }}</p>  
                             </div>
                         </div>
                     </div>
