--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -168,7 +168,7 @@
             <div class="breadcrumb_content d-flex flex-column align-items-center">
               <h2 class="title wow fadeInUp" data-wow-delay=".3s">Подробности блога</h2>
               <div class="breadcrumb_navigation wow fadeInUp" data-wow-delay=".5s">
-                <span><a href="index.html">Домой</a></span>
+                <span><a href="index.html">Главная страница</a></span>
                 <i class="far fa-long-arrow-right"></i>
                 <span class="current-item">Подробности блога</span>
               </div>
@@ -188,296 +188,40 @@
               <article class="tj-single__post">
                 <div class="tj-post__thumb">
                   <img src="{{blogs.image.url}}" alt="">
-                  <a href="#" class="category">{{blogs.category}}</a>
                 </div>
                 <div class="tj-post__content">
                   <div class="tj-post__meta entry-meta">
-                    <span><i class="fa-light fa-user"></i> <a href="#">Администратор</a></span>
-                    <span><i class="fa-light fa-calendar-days"></i>{{blogs.data}}</span>
-                    <span><i class="fa-light fa-comments"></i><a href="#">Comments {{blogs.comments}}</a></span>
+                    <span><i class="fa-light fa-calendar-days"></i>{{blogs.created_at}}</span>
+                    
                   </div>
                   <h3 class="tj-post__title entry-title">
-                    Роль технологий в современном управлении логистикой
+                    {{blogs.name_blog}}
                   </h3>
 
-                  <div class="tj-post__content">
-                    <p>Добро пожаловать в наш блог, где мы отмечаем наше достижение в качестве партнера AWS 
-                      SaaS Competency и делимся мыслями о том, как нам удалось достичь этой важной вехи.</p>
+                  <div class="tj-post__content">  
+                    <p>{{blogs.description}}</p>
 
-                    <p>
-                      Поскольку предприятия открывают возможности роста в эпоху цифровых технологий, использование 
-                      возможностей облачных вычислений становится необходимым. Amazon Web Services (AWS) предлагает 
-                      партнерскую программу AWS SaaS Competency Partner, которая признает компании с исключительным опытом 
-                      в предоставлении решений «программное обеспечение как услуга» на платформе AWS.
-                    </p>
-
-                    <p>В этом блоге мы рассмотрим стратегии, лучшие практики и ключевые факторы, которые ускорили 
-                      рост нашего бизнеса и принесли нам престижный статус партнера AWS SaaS Competency Partner.</p>
-
-                    <blockquote class="wp-block-quote">
-                      <p>«Добро пожаловать в наш блог, где мы отмечаем наши достижения в качестве партнера AWS SaaS Competency и
-                        поделитесь своими мыслями о том, как мы достигли этой важной вехи.
-                        Поскольку предприятия открывают возможности роста в эпоху цифровых технологий, используя возможности облака
-                        вычисления стали необходимыми. Amazon Web Services (AWS) предлагает компетенцию AWS SaaS».</p>
                       
                     </blockquote>
 
-                    <h4>Роль технологий в современном управлении логистикой</h4>
-                    <p>
-                      Добро пожаловать в наш блог, где мы отмечаем наше достижение в качестве партнера AWS 
-                      SaaS Competency и делимся мыслями о том, как нам удалось достичь этой важной вехи.
-                    </p>
-
-                    <p>Поскольку предприятия открывают возможности роста в эпоху цифровых технологий, использование 
-                      возможностей облачных вычислений становится необходимым. Amazon Web Services (AWS) предлагает 
-                      партнерскую программу AWS SaaS Competency Partner, которая признает компании с исключительным опытом 
-                      в предоставлении решений «программное обеспечение как услуга» на платформе AWS.</p>
-
-                    <p>В этом блоге мы рассмотрим стратегии, лучшие практики и ключевые факторы, которые ускорили 
-                      рост нашего бизнеса и принесли нам престижный статус партнера AWS SaaS Competency Partner.</p>
-                    <p>знайте о преобразующем влиянии технологий на управление логистикой. Обсудите, как технологии
-                      как Интернет вещей, искусственный интеллект и блокчейн меняют отрасль и повышают эффективность.</p>
-
-                    <h6>Ключевые моменты</h6>
-                    
-                    <ul>
-                      <li>Интернет вещей и отслеживание в реальном времени</li>
-                      <li>Искусственный интеллект в оптимизации маршрутов и прогнозной аналитике</li>
-                      <li>Блокчейн для повышения прозрачности и безопасности</li>
-                      <li>Автоматизация складов и робототехника</li>
-                    </ul>
-
-                    <h4>Заключение</h4>
-                    <p> Подчеркните долгосрочные преимущества интеграции устойчивых методов в логистические операции,
-                      как для планеты, так и для репутации компании.</p>
-
-                    <p>Эти схемы можно расширить до подробных публикаций в блогах, каждая из которых содержит ценную информацию.
-                      и информацию по соответствующим темам.</p>
+        
                   </div>
 
                 </div>
 
               </article>
-
-              <!-- post tags & social share -->
-              <div class="single-post_tag_share ">
-                <!-- post tags -->
-                <div class="tj_tag">
-                  <h4 class="tag__title">Теги: </h4>
-                  {%for tags in tags%}
-                  <div class="tagcloud">
-                    <a href="#" rel="tag">{{tags.name}}</a>
-                  </div>
-                  {% endfor %}
-                </div>
-                <div class="share_link">
-                  <a href="#" target="_blank" class="facebook" title="Share this on Facebook"><i
-                      class="fa-brands fa-facebook-f"></i></a>
-                  <a href="#" class="twitter" title="Share this on Twitter" target="_blank"><i
-                      class="fa-brands fa-x-twitter"></i></a>
-                  <a href="#" class="linkedin" title="Share this on Linkedin" target="_blank"><i
-                      class="fa-brands fa-linkedin-in"></i></a>
-                  <a href="#" class="pinterest" title="Pin this Post" target="_blank"><i
-                      class="fa-brands fa-pinterest-p"></i></a>
-                </div>
-              </div>
-
-              <!-- post navigation -->
-              <div class="single-post__navigation">
-
-                <!-- previous post -->
-                <div class="tj-navigation_post previous">
-
-                  <div class="tj-navigation-post_inner prev_post">
-                    <div class="navigation-post_img">
-                      <a href="#">
-                        <img src="{% static 'img/blog/1.jpg' %}" alt=""> </a>
-                    </div>
-                    <div class="tj-content">
-                      <div class="post_pagination_nav">
-                        <i class="fa-regular fa-angle-double-left"></i>предыдущий
-                      </div>
-                      <div class="post_pagination_title">
-                        <h5 class="title">
-                          <a href="#">Советы и идеи по созданию сайта о недвижимости</a>
-                        </h5>
-                      </div>
-                    </div>
-                  </div>  
-                </div>
-
-                <!-- next post -->
-
-                <div class="tj-navigation_post next">
-
-                  <div class="tj-navigation-post_inner next_post">
-
-                    <div class="tj-content">
-                      <div class="post_pagination_nav">
-                        СЛЕДУЮЩИЙ<i class="fa-regular fa-angle-double-right"></i>
-                      </div>
-                      <div class="post_pagination_title">
-                        <h5 class="title">
-                          <a href="#">Архитектура не основана на Concrete и Steel</a>
-                        </h5>
-                      </div>
-                    </div>
-                    <div class="navigation-post_img">
-                      <a href="#">
-                        <img src="{% static 'img/blog/2.jpg' %}" alt=""> </a>
-                    </div>
-                  </div>
-                </div>
               </div>
 
               <!-- comments area -->
-              <div class="tj-comments__container">
-
-                <div class="tj-comments__wrap">
-                  <div class="tj-comment__title">
-                    <h3>3 Отзывы</h3>
-                  </div>
-                  <div class="tj-latest__comments">
-                    {% for comments in comments %}
-                    <ul>
-                      <li class="tj__comment">
-                        <div class="tj-comment__wrap">
-                          <div class="comment__avatar">
-                            <img alt="" src="{{comments.image.url}}">
-                          </div>
-                          <div class="comment__text">
-                            <div class="avatar__name">
-                              <h5><a href="">{{comments.name}}</a></h5>
-                              <span>{{comments.data}}</span>
-                            </div>
-                            <p>{{comments.description}}</p>
-                            <div class="comment__reply">
-                              <a class="comment-reply-link" href="#">Reply</a>
-                            </div>
-                          </div>
-                        </div>
-                      </li>
-                    </ul>
-                    {%endfor%}
-                  </div>
-                </div>
-
-                <div class="comment-respond">
-                  <h3 class="comment-reply-title">
-                    <span class="tj-comment__title">Оставьте отзыв</span>
-                  </h3>
-
-                  <form action="index.html" class="tj-post-comment__form">
-                    <p class="comment-notes"><span id="email-notes">Ваш электронный адрес не будет опубликован. Необходимые поля отмечены *</span>
-                      <span class="required-field-message">Обязательные поля помечены<span
-                          class="required">*</span></span>
-                    </p>
-
-                    <div class="row">
-                      <div class="col-md-6">
-                        <div class="form_group">
-                          <input placeholder="Введите имя" id="author" name="author" type="text" aria-required="true">
-                        </div>
-                      </div>
-                      <div class="col-md-6">
-                        <div class="form_group">
-                          <input placeholder="Введите Email" id="email" name="email" type="email" aria-required="true">
-                        </div>
-                      </div>
-                      <div class="col-md-12">
-                        <div class="form_group">
-                          <input placeholder="Введите Website" id="url" name="url" type="url">
-                        </div>
-                      </div>
-                    </div>
-
-                    <div class="row">
-                      <div class="col-md-12 ">
-                        <div class="form_group">
-                          <textarea class="msg-box" placeholder="Введите ваш отзыв" id="comment" name="comment"
-                            cols="45" rows="8"></textarea>
-                        </div>
-                      </div>
-                      <div class="clearfix"></diCATEGORIES>
-                    </div>
-
-                    <p class="comment-form-cookies-consent">
-                      <input id="wp-comment-cookies-consent" name="wp-comment-cookies-consent" type="checkbox"
-                        value="yes">
-                      <label for="wp-comment-cookies-consent">Сохраните мое имя, адрес электронной почты и веб-сайт в 
-                        этом браузере, чтобы я мог оставить комментарий в следующий раз.</label>
-                    </p>
-                    <button class="tj-btn-primary submit" type="submit">Отправить отзыв</button>
-                  </form>
-                </div>
+  
+                
               </div>
             </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="tj_main_sidebar">
-              <div class="sidebar_widget widget_search wow fadeInUp" data-wow-delay=".3s">
-                <div class="tj-widget__search form_group">
-                  <form class="search-form" action="#" method="get">
-                    <input type="search" id="search" name="search" placeholder="Поиск...">
-                    <button class="search-btn" type="submit"> <i class="fa-light fa-magnifying-glass"></i> </button>
-                  </form>
-                </div>
-              </div>
+          </div>  
 
-              <div class="sidebar_widget widget_categories wow fadeInUp" data-wow-delay=".3s">
-                <div class="widget_title">
-                  <h3 class="title">Категории</h3>
-                </div>
+              
 
-                <ul>
-                  <li><a href="#">Занятие</a> (4)</li>
-                  <li><a href="#">Анализы</a> (0)</li>
-                  <li><a href="#">Технологии</a> (1)</li>
-                </ul>
-              </div>
-
-              <div class="sidebar_widget tj_recent_posts wow fadeInUp" data-wow-delay=".3s">
-                <div class="widget_title">
-                  <h3 class="title">НЕДАВНИЙ ПОСТ</h3>
-                </div>
-
-                <ul>
-                  {%for post in post %}
-                  <li>
-                    <div class="recent-post_thumb">
-                      <a href="blog-details.html">
-                        <img src="{{post.image.url}}" alt="">
-                      </a>
-                    </div>
-
-                    <div class="recent-post_content">
-                      <div class="tj-post__meta entry-meta">
-                        <span><i class="fa-light fa-calendar-days"></i>{{post.data}}</span>
-                        <span><i class="fa-light fa-comments"></i><a href="#">{{post.comments}}</a></span>
-                      </div>
-                      <h4 class="recent-post_title">
-                        <a href="blog-details.html">{{post.name_blog}}</a>
-                      </h4>
-                    </div>
-                  </li>
-                  {% endfor%}
-                </ul>
-
-              </div>
-
-              <div class="sidebar_widget widget_tag_cloud wow fadeInUp" data-wow-delay=".3s">
-                <div class="widget_title">
-                  <h3 class="title">Популярные теги</h3>
-                </div>
-
-                <div class="tagcloud">
-                  <a href="#">Занятие</a>
-                  <a href="#">Анализы</a>
-                  <a href="#">технологии</a>
-                  <a href="#">Финанс</a>
-                  <a href="#">Дизайн</a>
-                </div>
-              </div>
+              
             </div>
           </div>
         </div>
@@ -487,32 +231,7 @@
   </main>
 
   <!-- FOOTER AREA START -->
-  <footer class="tj-footer-area">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <div class="footer-logo-box">
-            <a href="#"><img src="{% static 'img/logo/logo.png' %}" alt=""></a>
-          </div>
-          <div class="footer-menu">
-            <nav>
-              <ul>
-                <li><a href="#services-section">Сервисы</a></li>
-                <li><a href="#works-section">Проекты</a></li>
-                <li><a href="#resume-section">Резюме</a></li>
-                <li><a href="#skills-section">навыки</a></li>
-                <li><a href="#testimonials-section">Отзывы</a></li>
-                <li><a href="#contact-section">Контакты</a></li>
-              </ul>
-            </nav>
-          </div>
-          <div class="copy-text">
-            <p>&copy; 2024 All rights reserved by <a href="#" target="_blank">ThemeJunction</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </footer>
+  
   <!-- FOOTER AREA END -->
 
 
